2009-09-27 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h (nact_clipboard_primary_set,
	nact_clipboard_primary_get, nact_clipboard_primary_counts):
	Now use the NactClipboard convenience object.

	* src/nact/nact-main-menubar.c:
	Now use the NactClipboard convenience object.

	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h (nact_main_window_get_clipboard):
	New function.

2009-09-26 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-iduplicable.c:
	* src/common/na-iduplicable.c (na_iduplicable_dispose): New function.
	Rewrite signal logic to avoid having to override class handler.

	* src/common/na-gconf-monitor.c:
	* src/common/na-gconf-monitor.h:
	Embeds its own GConfClient.

	* src/common/na-gconf-provider.c:
	No more provide GConfClient from GConf provider.

	* src/common/na-iio-provider.c:
	* src/common/na-iio-provider.h:
	No more define signals for preferences management.
	Move providers from GSList to GList.

	* src/common/na-ipivot-consumer.c:
	* src/common/na-ipivot-consumer.h:
	Rename IPivotConsumer notification functions.

	* src/common/na-object.c: Call na_iduplicable_dispose().

	* src/common/na-pivot.c:
	No more define signals for preferences management.
	Move monitors from GSList to GList.
	Move providers from GSList to GList.

	* src/nact/base-builder.c:
	* src/nact/base-builder.h: New files.

	* src/nact/Makefile.am: Updated accordingly.

	* src/nact/base-application.c:
	* src/nact/base-application.h:
	Embeds a NactBuilder object.
	base_application_get_toplevel(), base_application_get_widget(),
	base_application_search_for_widget(): Removed functions.

	* src/nact/base-assistant.c:
	Remove embedded GtkBuilder object.

	* src/nact/base-window-class.h (get_ui_filename):
	New virtual function.
	base_window_get_toplevel_window(): Renamed to
	base_window_get_toplevel().

	* src/nact/base-iprefs.c:
	* src/nact/nact-main-window.c: