@@ -1,9 +1,15 @@
 2009-09-27 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/common/na-object-item.c (na_object_item_remove_item):
+	Release the reference on the removed item.
+
 	* src/nact/nact-clipboard.c:
 	* src/nact/nact-clipboard.h (nact_clipboard_primary_set,
 	nact_clipboard_primary_get, nact_clipboard_primary_counts):
 	Now use the NactClipboard convenience object.
+
+	* src/nact/nact-iactions-list.c (on_treeview_selection_changed):
+	Only get selected items when about to send the message.
 
 	* src/nact/nact-main-menubar.c:
 	Now use the NactClipboard convenience object.
